fix font not showing

--- a/assets/fonts/fontiran.css
+++ b/assets/fonts/fontiran.css
@@ -20,7 +20,7 @@ This set of fonts are used in this project under the license: (.....)
 	font-family: IRANSans;
 	font-style: normal;
 	font-weight: 900;
-
+	font-display: swap;
 	src: url('./fonts/ttf/IRANSansWeb(FaNum)_Black.ttf') format('truetype');
 }
 
@@ -28,7 +28,7 @@ This set of fonts are used in this project under the license: (.....)
 	font-family: IRANSans;
 	font-style: normal;
 	font-weight: bold;
-
+	font-display: swap;
 	src: url('./fonts/ttf/IRANSansWeb(FaNum)_Bold.ttf') format('truetype');
 }
 
@@ -36,7 +36,7 @@ This set of fonts are used in this project under the license: (.....)
 	font-family: IRANSans;
 	font-style: normal;
 	font-weight: 500;
-
+	font-display: swap;
 	src: url('./fonts/ttf/IRANSansWeb(FaNum)_Medium.ttf') format('truetype');
 }
 
@@ -44,7 +44,7 @@ This set of fonts are used in this project under the license: (.....)
 	font-family: IRANSans;
 	font-style: normal;
 	font-weight: 300;
-
+	font-display: swap;
 	src: url('./fonts/ttf/IRANSansWeb(FaNum)_Light.ttf') format('truetype');
 }
 
@@ -52,7 +52,7 @@ This set of fonts are used in this project under the license: (.....)
 	font-family: IRANSans;
 	font-style: normal;
 	font-weight: 200;
-
+	font-display: swap;
 	src: url('./fonts/ttf/IRANSansWeb(FaNum)_UltraLight.ttf') format('truetype');
 }
 
@@ -60,6 +60,6 @@ This set of fonts are used in this project under the license: (.....)
 	font-family: IRANSans;
 	font-style: normal;
 	font-weight: normal;
-
+	font-display: swap;
 	src: url('./fonts/ttf/IRANSansWeb(FaNum).ttf') format('truetype');
 }
